@@ -28,8 +28,8 @@
     </distributionManagement>
 
     <properties>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <pearlzip.sign.store.password>SET STORE PASSWORD</pearlzip.sign.store.password>
         <pearlzip.sign.key.password>SET KEY PASSWORD</pearlzip.sign.key.password>
         <maven.deploy.skip>true</maven.deploy.skip>
@@ -160,9 +160,8 @@
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
-                   <source>15</source>
-                   <target>15</target>
-                   <compilerArgs>--enable-preview</compilerArgs>
+                   <source>17</source>
+                   <target>17</target>
                </configuration>
            </plugin>
        </plugins>
