@@ -35,9 +35,9 @@ then
   exit 1
 fi
 
-if [ $(${JAVA_ROOT}java -version 2>&1 | awk -F '"' '/version/ {print $2}' | cut -d. -f1) -lt 15 ]
+if [ $(${JAVA_ROOT}java -version 2>&1 | awk -F '"' '/version/ {print $2}' | cut -d. -f1) -lt 17 ]
 then
-  echo "Java >= 15 has not been installed. Exiting..."
+  echo "Java >= 17 has not been installed. Exiting..."
   exit 1
 fi
 
@@ -66,16 +66,16 @@ echo "Identifying legacy modules..."
 ls -1 $rootDir/mods/ | while read line
 do
    echo "Archive: $rootDir/mods/$line"
-   ${JAVA_ROOT}jdeps --module-path $rootDir/mods/ --ignore-missing-deps --multi-release 15 --generate-module-info out "mods/$line" > /dev/null
+   ${JAVA_ROOT}jdeps --module-path $rootDir/mods/ --ignore-missing-deps --multi-release 17 --generate-module-info out "mods/$line" > /dev/null
    if [ "$?" -eq 0 ]
    then
      echo "Get module name"
-     moduleName=$(${JAVA_ROOT}jdeps --module-path $rootDir/mods/ --ignore-missing-deps --multi-release 15 --generate-module-info work "$rootDir/mods/$line" | grep "writing to" | cut -d" " -f3 | cut -d/ -f2)
+     moduleName=$(${JAVA_ROOT}jdeps --module-path $rootDir/mods/ --ignore-missing-deps --multi-release 17 --generate-module-info work "$rootDir/mods/$line" | grep "writing to" | cut -d" " -f3 | cut -d/ -f2)
      echo "Module name: $moduleName"
 
      echo "Generate module-info file..."
-     ${JAVA_ROOT}jdeps --ignore-missing-deps --multi-release 15 --generate-module-info $rootDir/work "$rootDir/mods/$line"
-     cp "work/$(ls -1 $rootDir/work)/versions/15/module-info.java" $rootDir/work/$(ls -1 $rootDir/work)/module-info.java
+     ${JAVA_ROOT}jdeps --ignore-missing-deps --multi-release 17 --generate-module-info $rootDir/work "$rootDir/mods/$line"
+     cp "work/$(ls -1 $rootDir/work)/versions/17/module-info.java" $rootDir/work/$(ls -1 $rootDir/work)/module-info.java
 
      echo "Building new jar..."
      mkdir $rootDir/classes
@@ -99,7 +99,7 @@ cp $rootDir/src/main/resources/lib/org.apache.commons.compress/commons-compress-
 cp $rootDir/src/main/resources/lib/com.sun.jna/jna-5.6.0.jar mods/
 
 echo "Create shared archive..."
-${JAVA_ROOT}java -Xshare:off -Djava.awt.headless=true --enable-preview -XX:+UseZGC -XX:DumpLoadedClassList=pz-class.lst --module-path="$(ls mods | xargs -I{} echo mods/{} | tr '\n' ':'):mods/pearl-zip-ui-$VERSION.jar" -m com.ntak.pearlzip.ui/com.ntak.pearlzip.ui.pub.ZipLauncher &
+${JAVA_ROOT}java -Xshare:off -Djava.awt.headless=true -XX:+UseZGC -XX:DumpLoadedClassList=pz-class.lst --module-path="$(ls mods | xargs -I{} echo mods/{} | tr '\n' ':'):mods/pearl-zip-ui-$VERSION.jar" -m com.ntak.pearlzip.ui/com.ntak.pearlzip.ui.pub.ZipLauncher &
 pid=$!
 echo "Dump list process PID: $pid"
 sleep 10
@@ -109,7 +109,7 @@ while [ $(ps -p $pid > /dev/null) ]; do
   sleep 10
 done
 
-${JAVA_ROOT}java -Xshare:dump -Djava.awt.headless=true --enable-preview -XX:+UseZGC -XX:SharedClassListFile=pz-class.lst -XX:SharedArchiveFile=pz-shared.jsa --module-path="$(ls mods | xargs -I{} echo mods/{} | tr '\n' ':'):mods/pearl-zip-ui-$VERSION.jar" com.ntak.pearlzip.ui.pub.ZipLauncher -m com.ntak.pearlzip.ui/com.ntak.pearlzip.ui.pub.ZipLauncher > /dev/null 2>&1 &
+${JAVA_ROOT}java -Xshare:dump -Djava.awt.headless=true -XX:+UseZGC -XX:SharedClassListFile=pz-class.lst -XX:SharedArchiveFile=pz-shared.jsa --module-path="$(ls mods | xargs -I{} echo mods/{} | tr '\n' ':'):mods/pearl-zip-ui-$VERSION.jar" com.ntak.pearlzip.ui.pub.ZipLauncher -m com.ntak.pearlzip.ui/com.ntak.pearlzip.ui.pub.ZipLauncher > /dev/null 2>&1 &
 pid=$!
 echo "Create JSA process PID: $pid"
 sleep 10
@@ -127,7 +127,7 @@ ${JAVA_ROOT}jlink --module-path=$rootDir/mods/ --add-modules=ALL-MODULE-PATH --o
 
 echo "Generate App Image"
 mkdir -p target/${LOCALE}
-${JAVA_ROOT}jpackage --dest target/${LOCALE} --type app-image --app-version $MAC_APP_VERSION --copyright "© copyright 2021 92AK" --description "A JavaFX front-end wrapper for some common archive formats" --name PearlZip --vendor 92AK --verbose --java-options "--enable-preview -XX:SharedArchiveFile=pz-shared.jsa -XX:+UseZGC" --icon "$rootDir/src/main/resources/pz-icon.icns" --mac-package-identifier com.ntak.pearl-zip --mac-package-identifier PearlZip  --module-path $rootDir/mods/ -m com.ntak.pearlzip.ui/com.ntak.pearlzip.ui.pub.ZipLauncher --file-associations $rootDir/src/main/resources/file-associations/fa-xz.properties --file-associations $rootDir/src/main/resources/file-associations/fa-bz2.properties --file-associations $rootDir/src/main/resources/file-associations/fa-zip.properties --file-associations $rootDir/src/main/resources/file-associations/fa-gzip.properties --file-associations $rootDir/src/main/resources/file-associations/fa-tar.properties --file-associations $rootDir/src/main/resources/file-associations/fa-jar.properties --runtime-image $rootDir/pz-runtime --verbose
+${JAVA_ROOT}jpackage --dest target/${LOCALE} --type app-image --app-version $MAC_APP_VERSION --copyright "© copyright 2021 92AK" --description "A JavaFX front-end wrapper for some common archive formats" --name PearlZip --vendor 92AK --verbose --java-options "-XX:SharedArchiveFile=pz-shared.jsa -XX:+UseZGC" --icon "$rootDir/src/main/resources/pz-icon.icns" --mac-package-identifier com.ntak.pearl-zip --mac-package-identifier PearlZip  --module-path $rootDir/mods/ -m com.ntak.pearlzip.ui/com.ntak.pearlzip.ui.pub.ZipLauncher --file-associations $rootDir/src/main/resources/file-associations/fa-xz.properties --file-associations $rootDir/src/main/resources/file-associations/fa-bz2.properties --file-associations $rootDir/src/main/resources/file-associations/fa-zip.properties --file-associations $rootDir/src/main/resources/file-associations/fa-gzip.properties --file-associations $rootDir/src/main/resources/file-associations/fa-tar.properties --file-associations $rootDir/src/main/resources/file-associations/fa-jar.properties --runtime-image $rootDir/pz-runtime --verbose
 
 mkdir -p components
 echo "Generating changelog"
